src/test/ui/resolve/missing-in-namespace.stderr
error[E0433]: failed to resolve: could not find `hahmap` in `std`
  --> $DIR/missing-in-namespace.rs:2:29
   |
LL |     let _map = std::hahmap::HashMap::new();
   |                             ^^^^^^^ not found in `std::hahmap`
   |
help: consider importing this struct
   |
LL | use std::collections::HashMap;
   |
help: if you import `HashMap`, refer to it directly
   |
LL -     let _map = std::hahmap::HashMap::new();
LL +     let _map = HashMap::new();
   | 

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
